#9 Added enums FormType, LicenseType, QuoteStatus, ShipmentMessageType, StatusScreenPanelType, TicketCategoryFlags, TicketPriorityFlags, TicketPriorityStatus

--- a/docs/api-reference/CRMScript.Native.Company.yml
+++ b/docs/api-reference/CRMScript.Native.Company.yml
@@ -52,7 +52,7 @@ items:
   fullName: CRMScript.Native.Company.checkFieldRights(String,String)
   type: Method
   summary: "\nChecks if the current user has access to the field.\n"
-  remarks: "\nfieldRight might be:<p></p>\n<ul><li>read</li><li>write</li></ul>\n"
+  remarks: ""
   syntax: 
     content: Bool checkFieldRights(String field, String fieldRight)
     parameters:
@@ -78,7 +78,7 @@ items:
   fullName: CRMScript.Native.Company.checkTableRights(String)
   type: Method
   summary: "\nChecks if the current user has access to this company.\n"
-  remarks: "\ntableRight might be:<p></p>\n<ul><li>select</li><li>update</li><li>insert</li></ul>\n"
+  remarks: ""
   syntax: 
     content: Bool checkTableRights(String tableRight)
     parameters:
