--- a/docs/api-reference/CRMScript.Native.Customer.yml
+++ b/docs/api-reference/CRMScript.Native.Customer.yml
@@ -120,7 +120,7 @@ items:
   fullName: CRMScript.Native.Customer.checkFieldRights(String,String)
   type: Method
   summary: "\nChecks if the current user has access to the field.\n"
-  remarks: "\nfieldRight might be:<p></p>\n<ul><li>read</li><li>write</li></ul>\n"
+  remarks: ""
   syntax: 
     content: Bool checkFieldRights(String field, String fieldRight)
     parameters:
@@ -146,7 +146,7 @@ items:
   fullName: CRMScript.Native.Customer.checkTableRights(String)
   type: Method
   summary: "\nUse this function to see if the current user has access to this customer.\n"
-  remarks: "\ntableRight might be:<p></p>\n<ul><li>select</li><li>update</li><li>insert</li></ul>\n"
+  remarks: ""
   syntax: 
     content: Bool checkTableRights(String tableRight)
     parameters:
