--- a/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
@@ -442,14 +442,14 @@ items:
   nameWithType: NSFormEntity.GetType()
   fullName: CRMScript.NetServer.NSFormEntity.GetType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Normal</li><li>Enum: 1 = Template</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: What kind of form is this? Indicates if this is a normal form or a template
+      description: What kind of form is this? Indicates if this is a normal form or a template. See <xref href=\"FormType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSFormEntity thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFormEntity.GetUpdated()
@@ -925,7 +925,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: What kind of form is this? Indicates if this is a normal form or a template. See enum type.
+      description: What kind of form is this? Indicates if this is a normal form or a template. See <xref href=\"FormType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1039,3 +1039,9 @@ references:
   name: FormsRecaptchaMode
   nameWithType: FormsRecaptchaMode
   fullName: CRMScript.NetServer.FormsRecaptchaMode
+- uid: CRMScript.NetServer.FormType
+  commentId: T:CRMScript.NetServer.FormType
+  isExternal: true
+  name: FormType
+  nameWithType: FormType
+  fullName: CRMScript.NetServer.FormType
