--- a/docs/api-reference/CRMScript.NetServer.NSPreference.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreference.yml
@@ -120,14 +120,14 @@ items:
   nameWithType: NSPreference.GetLevel()
   fullName: CRMScript.NetServer.NSPreference.GetLevel()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Undefined</li><li>Enum: 1 = HardDefault</li><li>Enum: 2 = SystemWide</li><li>Enum: 3 = Database</li><li>Enum: 4 = Group</li><li>Enum: 5 = Individual</li><li>Enum: 6 = PC</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetLevel()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: NSPreference level, using the standard enumerated type. Undefined is returned for preferences that do not have a current setting.
+      description: See <xref href=\"CRMScript.NetServer.PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>. Undefined is returned for preferences that do not have a current setting.
   example: 
   - "\n<pre><code>NSPreference thing;\nInteger level = thing.GetLevel();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPreference.GetPrefDescId()
@@ -352,7 +352,7 @@ items:
     parameters:
     - id: level
       type: CRMScript.Global.Integer
-      description: NSPreference level, using the standard enumerated type. See enum level.
+      description: Preference level. See <xref href=\"CRMScript.NetServer.PreferenceLevel\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -554,3 +554,9 @@ references:
   name: PrefDescValueType
   nameWithType: PrefDescValueType
   fullName: CRMScript.NetServer.PrefDescValueType
+- uid: CRMScript.NetServer.PreferenceLevel
+  commentId: T:CRMScript.NetServer.PreferenceLevel
+  isExternal: true
+  name: PreferenceLevel
+  nameWithType: PreferenceLevel
+  fullName: CRMScript.NetServer.PreferenceLevel
