--- a/docs/api-reference/CRMScript.NetServer.NSQuoteAlternative.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteAlternative.yml
@@ -424,14 +424,14 @@ items:
   nameWithType: NSQuoteAlternative.GetStatus()
   fullName: CRMScript.NetServer.NSQuoteAlternative.GetStatus()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Ok</li><li>Enum: 1 = OkWithInfo</li><li>Enum: 2 = Warning</li><li>Enum: 3 = Error</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: If there was a problem with for instance calculation, this field is set to warning or error.
+      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteAlternative thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteAlternative.GetSubTotal()
@@ -925,7 +925,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: If there was a problem with for instance calculation, this field is set to warning or error. See enum status.
+      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1077,3 +1077,9 @@ references:
   name: ValueOverride
   nameWithType: ValueOverride
   fullName: CRMScript.NetServer.ValueOverride
+- uid: CRMScript.NetServer.QuoteStatus
+  commentId: T:CRMScript.NetServer.QuoteStatus
+  isExternal: true
+  name: QuoteStatus
+  nameWithType: QuoteStatus
+  fullName: CRMScript.NetServer.QuoteStatus
