--- a/docs/api-reference/CRMScript.NetServer.NSQuoteLine.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteLine.yml
@@ -797,13 +797,13 @@ items:
   fullName: CRMScript.NetServer.NSQuoteLine.GetStatus()
   type: Method
   summary: ""
-  remarks: "\nTypically shown as an icon.<ul><li>Enum: 0 = Ok</li><li>Enum: 1 = OkWithInfo</li><li>Enum: 2 = Warning</li><li>Enum: 3 = Error</li></ul>\n"
+  remarks: "\nTypically shown as an icon.\n"
   syntax: 
     content: Integer GetStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: If there was a problem with for instance calculation, this field is set to warning or error. QuoteStatus is an enum with statuses OK, OKWithInfo, Warning, Error.
+      description: If there was a problem with for instance calculation, this field is set to warning or error. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteLine thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteLine.GetSubscriptionQuantity()
@@ -1849,7 +1849,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: If there was a problem with for instance calculation, this field is set to warning or error. Typically shown as an icon. Integer is an enum with statuses OK, OKWithInfo, Warning, Error. See enum status.
+      description: If there was a problem with for instance calculation, this field is set to warning or error. Typically shown as an icon. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -2253,3 +2253,9 @@ references:
   name: ValueOverride
   nameWithType: ValueOverride
   fullName: CRMScript.NetServer.ValueOverride
+- uid: CRMScript.NetServer.QuoteStatus
+  commentId: T:CRMScript.NetServer.QuoteStatus
+  isExternal: true
+  name: QuoteStatus
+  nameWithType: QuoteStatus
+  fullName: CRMScript.NetServer.QuoteStatus
