--- a/docs/api-reference/CRMScript.NetServer.NSQuoteVersionStatusInformation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteVersionStatusInformation.yml
@@ -106,14 +106,14 @@ items:
   nameWithType: NSQuoteVersionStatusInformation.GetStatus()
   fullName: CRMScript.NetServer.NSQuoteVersionStatusInformation.GetStatus()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Ok</li><li>Enum: 1 = OkWithInfo</li><li>Enum: 2 = Warning</li><li>Enum: 3 = Error</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Status information for the quote version.
+      description: Status information for the quote version. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteVersionStatusInformation thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersionStatusInformation.SetDisplayMessage(String)
@@ -199,7 +199,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: Status information for the quote version. See enum status.
+      description: Status information for the quote version. See <xref href=\"QuoteStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -229,3 +229,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.QuoteStatus
+  commentId: T:CRMScript.NetServer.QuoteStatus
+  isExternal: true
+  name: QuoteStatus
+  nameWithType: QuoteStatus
+  fullName: CRMScript.NetServer.QuoteStatus
