--- a/docs/api-reference/CRMScript.NetServer.NSSaleSummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleSummaryItem.yml
@@ -98,14 +98,14 @@ items:
   nameWithType: NSSaleSummaryItem.GetCompleted()
   fullName: CRMScript.NetServer.NSSaleSummaryItem.GetCompleted()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = NotStarted</li><li>Enum: 2 = Started</li><li>Enum: 3 = Completed</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetCompleted()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The Completed state. NotStarted(1) or Completed(3)
+      description: The Completed state. NotStarted(1) or Completed(3). See <xref href=\"SaleStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSSaleSummaryItem thing;\nInteger completed = thing.GetCompleted();</code></pre>\n"
 - uid: CRMScript.NetServer.NSSaleSummaryItem.GetCurrency()
