--- a/docs/api-reference/CRMScript.NetServer.NSTicketPriorityEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketPriorityEntity.yml
@@ -132,14 +132,14 @@ items:
   nameWithType: NSTicketPriorityEntity.GetFlags()
   fullName: CRMScript.NetServer.NSTicketPriorityEntity.GetFlags()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = External</li><li>Enum: 2 = Default</li><li>Enum: 4 = AlertSchedule</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetFlags()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: A bit mask of flags.
+      description: A bit mask of flags. See <xref href=\"CRMScript.NetServer.TicketPriorityFlags\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger flags = thing.GetFlags();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetFriStart()
@@ -332,14 +332,14 @@ items:
   nameWithType: NSTicketPriorityEntity.GetStatus()
   fullName: CRMScript.NetServer.NSTicketPriorityEntity.GetStatus()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = Normal</li><li>Enum: 2 = Deleted</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetStatus()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The status (normal/deleted) of the priority.
+      description: The status (normal/deleted) of the priority. See <xref href=\"CRMScript.NetServer.TicketPriorityStatus\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSTicketPriorityEntity thing;\nInteger status = thing.GetStatus();</code></pre>\n"
 - uid: CRMScript.NetServer.NSTicketPriorityEntity.GetSunStart()
@@ -683,7 +683,7 @@ items:
     parameters:
     - id: flags
       type: CRMScript.Global.Integer
-      description: A bitmask of flags. See enum
+      description: A bitmask of flags. See <xref href=\"CRMScript.NetServer.TicketPriorityFlags\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -903,7 +903,7 @@ items:
     parameters:
     - id: status
       type: CRMScript.Global.Integer
-      description: The status (normal/deleted) of the priority. See enum status.
+      description: The status (normal/deleted) of the priority. See <xref href=\"CRMScript.NetServer.TicketPriorityStatus\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1273,3 +1273,15 @@ references:
   name: TicketPriorityEscalateEvent
   nameWithType: TicketPriorityEscalateEvent
   fullName: CRMScript.NetServer.TicketPriorityEscalateEvent
+- uid: CRMScript.NetServer.TicketPriorityStatus
+  commentId: T:CRMScript.NetServer.TicketPriorityStatus
+  isExternal: true
+  name: TicketPriorityStatus
+  nameWithType: TicketPriorityStatus
+  fullName: CRMScript.NetServer.TicketPriorityStatus
+- uid: CRMScript.NetServer.TicketPriorityFlags
+  commentId: T:CRMScript.NetServer.TicketPriorityFlags
+  isExternal: true
+  name: TicketPriorityFlags
+  nameWithType: TicketPriorityFlags
+  fullName: CRMScript.NetServer.TicketPriorityFlags
