--- a/docs/api-reference/CRMScript.NetServer.RecurrencePattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.RecurrencePattern.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: RecurrencePattern
   fullName: CRMScript.NetServer.RecurrencePattern
   type: Enum
-  summary: "\nEnumerator describing the main pattern of recurrence.\n"
+  summary: "\nThe main pattern of recurrence.\n"
 - uid: CRMScript.NetServer.RecurrencePattern.Unknown
   commentId: F:CRMScript.NetServer.RecurrencePattern.Unknown
   id: RecurrencePattern.Unknown
