--- a/docs/api-reference/CRMScript.NetServer.TicketBaseStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.TicketBaseStatus.yml
@@ -1,7 +1,7 @@
 ### YamlMime:ManagedReference
 items:
 - uid: CRMScript.NetServer.TicketBaseStatus
-  # Same as SuperOffice.Data.TicketTicketBaseStatus
+  # Same as SuperOffice.Data.TicketBaseStatus
   commentId: T:CRMScript.NetServer.TicketBaseStatus
   id: TicketBaseStatus
   langs:
