--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -48,12 +48,14 @@ items:
   - CRMScript.NetServer.FieldAccess
   - CRMScript.NetServer.FieldMetadataType
   - CRMScript.NetServer.FormSubmissionStatus
+  - CRMScript.NetServer.FormType
   - CRMScript.NetServer.FreeTextOperator
   - CRMScript.NetServer.GeneratorEncoding
   - CRMScript.NetServer.ImportAction
   - CRMScript.NetServer.ImportEntityType
   - CRMScript.NetServer.InvitationStatus
   - CRMScript.NetServer.LicenseStatus
+  - CRMScript.NetServer.LicenseType
   - CRMScript.NetServer.LocalizedTextType
   - CRMScript.NetServer.MailboxType
   - CRMScript.NetServer.Navigation
@@ -423,6 +425,7 @@ items:
   - CRMScript.NetServer.PrefDescValueType
   - CRMScript.NetServer.PreferenceLevel
   - CRMScript.NetServer.PublishType
+  - CRMScript.NetServer.QuoteStatus
   - CRMScript.NetServer.QuoteVersionButtonAction
   - CRMScript.NetServer.QuoteVersionState
   - CRMScript.NetServer.RecurrencePattern
@@ -439,19 +442,24 @@ items:
   - CRMScript.NetServer.SelectionUnionType
   - CRMScript.NetServer.SenderMailMode
   - CRMScript.NetServer.ShipmentAddrStatus
+  - CRMScript.NetServer.ShipmentMessageType
   - CRMScript.NetServer.ShipmentStatus
   - CRMScript.NetServer.ShowState
+  - CRMScript.NetServer.StatusScreenPanelType
   - CRMScript.NetServer.StringSearchType
   - CRMScript.NetServer.SystemEventScope
   - CRMScript.NetServer.TaskType
   - CRMScript.NetServer.TemporaryKeyDomain
   - CRMScript.NetServer.TicketBaseStatus
   - CRMScript.NetServer.TicketCategoryClosingStatus
+  - CRMScript.NetServer.TicketCategoryFlags
   - CRMScript.NetServer.TicketCategoryDelegateMethod
   - CRMScript.NetServer.TicketMessageCategory
   - CRMScript.NetServer.TicketMessageType
   - CRMScript.NetServer.TicketOrigin
   - CRMScript.NetServer.TicketPriorityEscalateEvent
+  - CRMScript.NetServer.TicketPriorityStatus
+  - CRMScript.NetServer.TicketPriorityFlags
   - CRMScript.NetServer.TicketReadStatus
   - CRMScript.NetServer.TicketSecurityLevel
   - CRMScript.NetServer.TicketStatusTimeCounter
@@ -926,6 +934,12 @@ references:
   name: LicenseStatus
   nameWithType: LicenseStatus
   fullName: CRMScript.NetServer.LicenseStatus
+- uid: CRMScript.NetServer.LicenseType
+  commentId: T:CRMScript.NetServer.LicenseType
+  isExternal: true
+  name: LicenseType
+  nameWithType: LicenseType
+  fullName: CRMScript.NetServer.LicenseType
 - uid: CRMScript.NetServer.NSCheckoutInfo
   commentId: T:CRMScript.NetServer.NSCheckoutInfo
   isExternal: true
@@ -1370,6 +1384,12 @@ references:
   name: ShipmentAddrStatus
   nameWithType: ShipmentAddrStatus
   fullName: CRMScript.NetServer.ShipmentAddrStatus
+- uid: CRMScript.NetServer.ShipmentMessageType
+  commentId: T:CRMScript.NetServer.ShipmentMessageType
+  isExternal: true
+  name: ShipmentMessageType
+  nameWithType: ShipmentMessageType
+  fullName: CRMScript.NetServer.ShipmentMessageType
 - uid: CRMScript.NetServer.ShipmentStatus
   commentId: T:CRMScript.NetServer.ShipmentStatus
   isExternal: true
@@ -1586,6 +1606,12 @@ references:
   name: FormSubmissionStatus
   nameWithType: FormSubmissionStatus
   fullName: CRMScript.NetServer.FormSubmissionStatus
+- uid: CRMScript.NetServer.FormType
+  commentId: T:CRMScript.NetServer.FormType
+  isExternal: true
+  name: FormType
+  nameWithType: FormType
+  fullName: CRMScript.NetServer.FormType
 - uid: CRMScript.NetServer.NSFreeText
   commentId: T:CRMScript.NetServer.NSFreeText
   isExternal: true
@@ -1970,6 +1996,12 @@ references:
   name: NSPhoneListPreferences
   nameWithType: NSPhoneListPreferences
   fullName: CRMScript.NetServer.NSPhoneListPreferences
+- uid: CRMScript.NetServer.StatusScreenPanelType
+  commentId: T:CRMScript.NetServer.StatusScreenPanelType
+  isExternal: true
+  name: StatusScreenPanelType
+  nameWithType: StatusScreenPanelType
+  fullName: CRMScript.NetServer.StatusScreenPanelType
 - uid: CRMScript.NetServer.StringSearchType
   commentId: T:CRMScript.NetServer.StringSearchType
   isExternal: true
@@ -2252,6 +2284,12 @@ references:
   name: NSQuoteAgent
   nameWithType: NSQuoteAgent
   fullName: CRMScript.NetServer.NSQuoteAgent
+- uid: CRMScript.NetServer.QuoteStatus
+  commentId: T:CRMScript.NetServer.QuoteStatus
+  isExternal: true
+  name: QuoteStatus
+  nameWithType: QuoteStatus
+  fullName: CRMScript.NetServer.QuoteStatus
 - uid: CRMScript.NetServer.QuoteVersionButtonAction
   commentId: T:CRMScript.NetServer.QuoteVersionButtonAction
   isExternal: true
@@ -2966,6 +3004,12 @@ references:
   name: TicketCategoryDelegateMethod
   nameWithType: TicketCategoryDelegateMethod
   fullName: CRMScript.NetServer.TicketCategoryDelegateMethod
+- uid: CRMScript.NetServer.TicketCategoryFlags
+  commentId: T:CRMScript.NetServer.TicketCategoryFlags
+  isExternal: true
+  name: TicketCategoryFlags
+  nameWithType: TicketCategoryFlags
+  fullName: CRMScript.NetServer.TicketCategoryFlags
 - uid: CRMScript.NetServer.NSTicketEntity
   commentId: T:CRMScript.NetServer.NSTicketEntity
   isExternal: true
@@ -3020,6 +3064,18 @@ references:
   name: TicketPriorityEscalateEvent
   nameWithType: TicketPriorityEscalateEvent
   fullName: CRMScript.NetServer.TicketPriorityEscalateEvent
+- uid: CRMScript.NetServer.TicketPriorityStatus
+  commentId: T:CRMScript.NetServer.TicketPriorityStatus
+  isExternal: true
+  name: TicketPriorityStatus
+  nameWithType: TicketPriorityStatus
+  fullName: CRMScript.NetServer.TicketPriorityStatus
+- uid: CRMScript.NetServer.TicketPriorityFlags
+  commentId: T:CRMScript.NetServer.TicketPriorityFlags
+  isExternal: true
+  name: TicketPriorityFlags
+  nameWithType: TicketPriorityFlags
+  fullName: CRMScript.NetServer.TicketPriorityFlags
 - uid: CRMScript.NetServer.NSTicketStatusEntity
   commentId: T:CRMScript.NetServer.NSTicketStatusEntity
   isExternal: true
