--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -946,6 +946,8 @@ items:
       href: CRMScript.NetServer.FormsRecaptchaMode.yml
     - name: FormSubmissionStatus
       href: CRMScript.NetServer.FormSubmissionStatus.yml
+    - name: FormType
+      href: CRMScript.NetServer.FormType.yml
     - name: FreeTextOperator
       href: CRMScript.NetServer.FreeTextOperator.yml
     - name: GeneratorEncoding
@@ -958,6 +960,8 @@ items:
       href: CRMScript.NetServer.InvitationStatus.yml
     - name: LicenseStatus
       href: CRMScript.NetServer.LicenseStatus.yml
+    - name: LicenseType
+      href: CRMScript.NetServer.LicenseType.yml
     - name: LocalizedTextType
       href: CRMScript.NetServer.LocalizedTextType.yml
     - name: Navigation
@@ -976,6 +980,8 @@ items:
       href: CRMScript.NetServer.PreferenceLevel.yml
     - name: PublishType
       href: CRMScript.NetServer.PublishType.yml
+    - name: QuoteStatus
+      href: CRMScript.NetServer.QuoteStatus.yml
     - name: QuoteVersionButtonAction
       href: CRMScript.NetServer.QuoteVersionButtonAction.yml
     - name: QuoteVersionState
@@ -1010,10 +1016,14 @@ items:
       href: CRMScript.NetServer.MailboxType.yml
     - name: ShipmentAddrStatus
       href: CRMScript.NetServer.ShipmentAddrStatus.yml
+    - name: ShipmentMessageType
+      href: CRMScript.NetServer.ShipmentMessageType.yml
     - name: ShipmentStatus
       href: CRMScript.NetServer.ShipmentStatus.yml
     - name: ShowState
       href: CRMScript.NetServer.ShowState.yml
+    - name: StatusScreenPanelType
+      href: CRMScript.NetServer.StatusScreenPanelType.yml
     - name: StringSearchType
       href: CRMScript.NetServer.StringSearchType.yml
     - name: SystemEventScope
@@ -1028,6 +1038,8 @@ items:
       href: CRMScript.NetServer.TicketCategoryClosingStatus.yml
     - name: TicketCategoryDelegateMethod
       href: CRMScript.NetServer.TicketCategoryDelegateMethod.yml
+    - name: TicketCategoryFlags
+      href: CRMScript.NetServer.TicketCategoryFlags.yml
     - name: TicketMessageCategory
       href: CRMScript.NetServer.TicketMessageCategory.yml
     - name: TicketMessageType
@@ -1036,6 +1048,10 @@ items:
       href: CRMScript.NetServer.TicketOrigin.yml
     - name: TicketPriorityEscalateEvent
       href: CRMScript.NetServer.TicketPriorityEscalateEvent.yml
+    - name: TicketPriorityStatus
+      href: CRMScript.NetServer.TicketPriorityStatus.yml
+    - name: TicketPriorityFlags
+      href: CRMScript.NetServer.TicketPriorityFlags.yml
     - name: TicketReadStatus
       href: CRMScript.NetServer.TicketReadStatus.yml
     - name: TicketSecurityLevel
