--- a/docs/api-reference/CRMScript.NetServer.NSModuleLicense.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSModuleLicense.yml
@@ -26,7 +26,7 @@ items:
   - CRMScript.NetServer.NSModuleLicense.SetExtraFlags(Integer)
   - CRMScript.NetServer.NSModuleLicense.SetExtraInfo(String)
   - CRMScript.NetServer.NSModuleLicense.SetIsHidden(Bool)
-  - CRMScript.NetServer.NSModuleLicense.SetLicenseType()
+  - CRMScript.NetServer.NSModuleLicense.SetLicenseType(Integer)
   - CRMScript.NetServer.NSModuleLicense.SetModuleDescription(String)
   - CRMScript.NetServer.NSModuleLicense.SetModuleName(String)
   - CRMScript.NetServer.NSModuleLicense.SetModuleTooltip(String)
@@ -148,14 +148,14 @@ items:
   nameWithType: NSModuleLicense.GetLicenseType()
   fullName: CRMScript.NetServer.NSModuleLicense.GetLicenseType()
   type: Method
-  summary: "<ul><li>Enum: 0 = Unknown</li><li>Enum: 1 = SiteLicense</li><li>Enum: 2 = SatelliteLicense</li><li>Enum: 3 = UserLicense</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetLicenseType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      describing: Entire system, per database, or per associate
+      describing: Entire system, per database, or per associate. See <xref href=\"CRMScript.NetServer.LicenseType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSModuleLicense thing;\nInteger licenseType = thing.GetLicenseType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicense.GetModuleDescription()
@@ -446,21 +446,24 @@ items:
       type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSModuleLicense thing;\nBool isHidden;\nthing.SetIsHidden(isHidden);</code></pre>\n"
-- uid: CRMScript.NetServer.NSModuleLicense.SetLicenseType()
-  commentId: M:CRMScript.NetServer.NSModuleLicense.SetLicenseType()
-  id: 'SetLicenseType()'
+- uid: CRMScript.NetServer.NSModuleLicense.SetLicenseType(Integer)
+  commentId: M:CRMScript.NetServer.NSModuleLicense.SetLicenseType(Integer)
+  id: 'SetLicenseType(Integer)'
   so.intellisense: NSModuleLicense.SetLicenseType
   langs:
   - crmscript
-  name: 'SetLicenseType()'
-  nameWithType: NSModuleLicense.SetLicenseType()
-  fullName: CRMScript.NetServer.NSModuleLicense.SetLicenseType()
+  name: 'SetLicenseType(Integer)'
+  nameWithType: NSModuleLicense.SetLicenseType(Integer)
+  fullName: CRMScript.NetServer.NSModuleLicense.SetLicenseType(Integer)
   type: Method
-  summary: "\nSets the licence typeThe entire system, per database, or per associate.\n"
+  summary: "\nSets the licence type.\n"
   remarks: 
   syntax: 
-    content: Void SetLicenseType()
-    parameters: []
+    content: Void SetLicenseType(Integer licenseType)
+    parameters:
+    - id: licenseType
+      type: CRMScript.Global.Integer
+      description: The entire system, per database, or per associate. See <xref href=\"CRMScript.NetServer.LicenseType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -722,3 +725,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.LicenseType
+  commentId: T:CRMScript.NetServer.LicenseType
+  isExternal: true
+  name: LicenseType
+  nameWithType: LicenseType
+  fullName: CRMScript.NetServer.LicenseType
