--- a/docs/api-reference/CRMScript.NetServer.NSQuoteVersionButtonState.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteVersionButtonState.yml
@@ -48,14 +48,14 @@ items:
   nameWithType: NSQuoteVersionButtonState.GetAction()
   fullName: CRMScript.NetServer.NSQuoteVersionButtonState.GetAction()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = None</li><li>Enum: 1 = ValidateVersion</li><li>Enum: 2 = Edit</li><li>Enum: 3 = Send</li><li>Enum: 4 = Approve</li><li>Enum: 5 = Reject</li><li>Enum: 7 = ValidateVersionAndSendIfPossible</li><li>Enum: 8 = ValidateVersionAndPlaceOrderIfPossible</li><li>Enum: 9 = CloneVersion</li><li>Enum: 10 = SendConfirmation</li><li>Enum: 11 = GetOrderState</li><li>Enum: 12 = UpdatePrices</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetAction()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Action for the button
+      description: Action for the button. See <xref href=\"CRMScript.NetServer.QuoteVersionButtonAction\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSQuoteVersionButtonState thing;\nInteger action = thing.GetAction();</code></pre>\n"
 - uid: CRMScript.NetServer.NSQuoteVersionButtonState.GetDisplayText()
@@ -155,7 +155,7 @@ items:
     parameters:
     - id: action
       type: CRMScript.Global.Integer
-      description: Action for the button See enum action.
+      description: Action for the button See <xref href=\"CRMScript.NetServer.QuoteVersionButtonAction\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -279,3 +279,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.QuoteVersionButtonAction
+  commentId: T:CRMScript.NetServer.QuoteVersionButtonAction
+  isExternal: true
+  name: QuoteVersionButtonAction
+  nameWithType: QuoteVersionButtonAction
+  fullName: CRMScript.NetServer.QuoteVersionButtonAction
