--- a/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSShipmentMessageEntity.yml
@@ -180,14 +180,14 @@ items:
   nameWithType: NSShipmentMessageEntity.GetFlags()
   fullName: CRMScript.NetServer.NSShipmentMessageEntity.GetFlags()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Plain</li><li>Enum: 1 = Html</li><li>Enum: 2 = SourceView</li><li>Enum: 4 = Sms</li><li>Enum: 8 = Document</li></ul>\n"
-  remarks: 
+  summary: ""
+  remarks:  
   syntax: 
     content: Integer GetFlags()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: Identifies if HTML or plain message is included in message.
+      description: Identifies if HTML or plain message is included in message. See <xref href=\"CRMScript.NetServer.ShipmentMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSShipmentMessageEntity thing;\nInteger flags = thing.GetFlags();</code></pre>\n"
 - uid: CRMScript.NetServer.NSShipmentMessageEntity.GetFolderId()
@@ -617,7 +617,7 @@ items:
     parameters:
     - id: flags
       type: CRMScript.Global.Integer
-      description: Identifies if HTML or plain message is included in message.
+      description: Identifies if HTML or plain message is included in message. See <xref href=\"CRMScript.NetServer.ShipmentMessageType\" data-throw-if-not-resolved=\"false\"></xref>.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -1001,3 +1001,9 @@ references:
   name: DesignType
   nameWithType: DesignType
   fullName: CRMScript.NetServer.DesignType
+- uid: CRMScript.NetServer.ShipmentMessageType
+  commentId: T:CRMScript.NetServer.ShipmentMessageType
+  isExternal: true
+  name: ShipmentMessageType
+  nameWithType: ShipmentMessageType
+  fullName: CRMScript.NetServer.ShipmentMessageType
